# masko-code

./: .gitignore  DELIVERABLES.txt  EXECUTIVE_SUMMARY.txt  IMPLEMENTATION_GUIDE_NCHITTEST.md  Info.plist  Package.swift  PermissionRequest_Hook_Research.md  README.md  README_RESEARCH.md  TAURI_2_UPDATER_RESEARCH.md  TAURI_SETIGNORE_CURSOR_EVENTS_ANALYSIS.md  hook-log.txt  package-lock.json  package.json  test-hook.sh  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release-windows.yml
Sources/App/: ContentView.swift  MaskoDesktopApp.swift
Sources/Debug/: PerfMonitor.swift  PerfOverlayView.swift
Sources/Models/: AgentEvent.swift  AppNotification.swift  ApprovalRecord.swift  MaskoCollection.swift
Sources/Services/: CodexAppServerClient.swift  CodexEventMapper.swift  CodexSessionMonitor.swift  ConnectionDoctor.swift  EdgeAudioService.swift  EventProcessor.swift  ExtensionInstaller.swift  GlobalHotkeyManager.swift  HookInstaller.swift  LocalServer.swift  OverlayStateMachine.swift
Sources/Stores/: AppStore.swift  ApprovalHistoryStore.swift  MascotStore.swift  NotificationStore.swift  PendingPermissionStore.swift  (+2 more)
Tests/: AppStoreAssistantEventStatusTests.swift  ClaudeEventAssistantTests.swift  CodexAppServerClientTests.swift  CodexEventMapperTests.swift  CodexInteractiveBridgeTests.swift  CodexSessionMonitorTests.swift  ConstantsServerPortTests.swift  EventProcessorTests.swift  OverlayManagerStartupTests.swift  OverlayManagerVisibilityTests.swift  PendingPermissionStoreTests.swift  SessionStoreProcessMatchersTests.swift  StatsOverlayVisibilityTests.swift
docs/: codex-parity.md  git-bash-signal-handling-research.md
masko-windows/: index.html  overlay.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
masko-windows/src-tauri/: Cargo.toml  tauri.conf.json
masko-windows/src-tauri/.cargo/: config.toml
masko-windows/src-tauri/capabilities/: main.json
masko-windows/src-tauri/src/: autostart.rs  commands.rs  hook_installer.rs  lib.rs  log.rs  models.rs  server.rs  tray.rs  usage.rs  win_overlay.rs
scripts/: codex-mascot-smoke.sh  create-dmg.sh  dmg-background.py  install.ps1
src/: App.tsx  index.tsx  overlay-entry.tsx
src-tauri/: Cargo.toml  tauri.conf.json
vscode-extension/: package.json
(+165 files in other folders)
